<resources>
    <string name="app_name">Quiz App</string>
    <string name="aliher_navoi_qachon_tug_ilgan">Aliher Navoi Qachon Tug\'ilgan?</string>
    <string name="_1442_yil">1442-yil</string>
    <string name="_1443_yil">1443-yil</string>
    <string name="_1444_yil">1444-yil</string>
    <string name="_1445_yil">1445-yil</string>
    <string name="tekshirish">Tekshirish</string>
    <string name="simple_android_quiz_app">Simple Android Quiz App</string>
</resources>